@startuml

title __SRP's Class Diagram__\n

  namespace SRP {
    class SRP.Main {
        {static} + main()
    }
  }
  

  namespace SRP {
    class SRP.Prepare {
        + cheese : List<Cheese>
        + magic : List<Magic>
        + name : String
        + toppings : List<Toppings>
        + Prepare()
        + addCheese()
        + addCrust()
        + addDough()
        + addMagic()
        + addName()
        + addSize()
        + addToppings()
    }
  }
  

  namespace SRP {
    class SRP.Prepare_Method_Ingredients {
        {static} - instance : Prepare_Method_Ingredients
        + getMethod()
        {static} + getPreparationMethod()
    }
  }
  

  SRP.Prepare o-- Singleton.Enum.Crust : crust
  SRP.Prepare o-- Singleton.Enum.Dough : dough
  SRP.Prepare o-- Singleton.Enum.Size : size


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
